# SmartSpace

./: .env.example  .gitignore  README.md  Readme.md  action_plan.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0cbeedd73816_floor_and_workspace_tables_modified.py  1d80f1f976d0_minor_tabular_chnages.py  2bee7f7683ac_few_minor_changes_in_resource_table_and_.py  2f79eb17b770_payments_table_and_its_relationship_.py  3544805f2edf_price_per_hour_column_added_as_part_of_.py  3b08e712c1c4_added_some_location_normalizing_and_.py  46d07f0da058_floor_and_workspace_tables_added.py  700b87d4bce7_floor_and_workspace_tables_added_again.py  8818022d0eb6_major_tabular_changes.py  8ca4de954113_resource_table_added_and_user_table_.py  8fdfd24577b3_bookingresource_table_created.py  91b55869eecf_user_table_created.py  934e5b9a5c9f_minor_changes_in_floor_table_and_others.py  adb9d5d62761_updated_user_table.py  b387c7e162ad_booking_and_booking_resource_table_.py  c3ba16020024_few_minor_changes_in_resource_table_and_.py  c61ecbdee489_booking_table_added_and_major_tabular_.py  cd2e245f46d0_added_created_at_in_booking_and_booking_.py  d4215700ea38_creating_bookingresource_table.py  d98aa0688f5b_resource_table_added_and_user_table_.py  e52677b021e8_cascading_added_to_resource_table.py  eb9d41db7a5e_booking_table_added_and_major_tabular_.py  f04e0a234f44_floor_table_modified.py
src/Exceptions/: Custom_Exception.py
src/core/: config.py  security.py
src/database/: Base.py  Session.py
src/dependencies/: auth.py
src/model/: __init__.py  booking.py  bookingresource.py  enum.py  floor.py  user.py  (+3 more)
(+31 files in other folders)
