[project]
name = "smartspace"
version = "0.1.0"
description = ""
authors = [
    {name = "Amogh Shukla",email = "amoghshukla548@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pydantic-extra-types (>=2.11.1,<3.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
